lightnet/lightnet.pxd


    image* get_weights(layer l)

    void demo(char* cfgfile, char* weightfile, float thresh, int cam_index, char* filename, char** names, int classes, int frame_skip, char* prefix, int avg, float hier_thresh, int w, int h, int fps, int fullscreen)

    void get_detection_boxes(layer l, int w, int h, float thresh, float** probs, box* boxes, int only_objectness)

    char* option_find_str(list* l, char* key, char* def_)

    int option_find_int(list* l, char* key, int def_)

    network* parse_network_cfg(char* filename)

    void save_weights(network* net, char* filename)

    void load_weights(network* net, char* filename)

    void save_weights_upto(network* net, char* filename, int cutoff)

    void load_weights_upto(network* net, char* filename, int start, int cutoff)

    void zero_objectness(layer l)

    void get_region_boxes(layer l, int w, int h, int netw, int neth, float thresh, float** probs, box* boxes, float** masks, int only_objectness, int* map, float tree_thresh, int relative)

    void free_network(network* net)

    void set_batch_network(network* net, int b)

    void set_temp_network(network* net, float t)

    image load_image(char* filename, int w, int h, int c)

    image load_image_color(char* filename, int w, int h)

    image make_image(int w, int h, int c)

    image resize_image(image im, int w, int h)

    image letterbox_image(image im, int w, int h)

    image crop_image(image im, int dx, int dy, int w, int h)

    image resize_min(image im, int min)

    image resize_max(image im, int max)

    image threshold_image(image im, float thresh)

    image mask_to_rgb(image mask)

    int resize_network(network* net, int w, int h)

    void free_matrix(matrix m)

    void test_resize(char* filename)

    void save_image(image p, char* name)

    void show_image(image p, char* name)

    image copy_image(image p)

    void draw_box_width(image a, int x1, int y1, int x2, int y2, int w, float r, float g, float b)

    float get_current_rate(network* net)

    void composite_3d(char* f1, char* f2, char* out, int delta)

    data load_data_old(char** paths, int n, int m, char** labels, int k, int w, int h)

    size_t get_current_batch(network* net)

    void constrain_image(image im)

    image get_network_image_layer(network* net, int i)

    layer get_network_output_layer(network* net)

    void top_predictions(network* net, int n, int* index)

    void flip_image(image a)

    image float_to_image(int w, int h, int c, float* data)

    void ghost_image(image source, image dest, int dx, int dy)

    float network_accuracy(network* net, data d)

    void random_distort_image(image im, float hue, float saturation, float exposure)

    void fill_image(image m, float s)

    image grayscale_image(image im)

    void rotate_image_cw(image im, int times)

    double what_time_is_it_now()

    image rotate_image(image m, float rad)

    void visualize_network(network* net)

    float box_iou(box a, box b)

    void do_nms(box* boxes, float** probs, int total, int classes, float thresh)

    data load_all_cifar10()

    box_label* read_boxes(char* filename, int* n)

    box float_to_box(float* f, int stride)

    void draw_detections(image im, int num, float thresh, box* boxes, float** probs, float** masks, char** names, image** alphabet, int classes)

    matrix network_predict_data(network* net, data test)

    image** load_alphabet()

    image get_network_image(network* net)

    float* network_predict(network* net, float* input)

    int network_width(network* net)

    int network_height(network* net)

    float* network_predict_image(network* net, image im)

    void network_detect(network* net, image im, float thresh, float hier_thresh, float nms, box* boxes, float** probs)

    int num_boxes(network* net)

    box* make_boxes(network* net)

    void reset_network_state(network* net, int b)

    char** get_labels(char* filename)

    void do_nms_sort(box* boxes, float** probs, int total, int classes, float thresh)

    void do_nms_obj(box* boxes, float** probs, int total, int classes, float thresh)

    matrix make_matrix(int rows, int cols)

    void free_image(image m)

    float train_network(network* net, data d)

    pthread_t load_data_in_thread(load_args args)

    void load_data_blocking(load_args args)

    list* get_paths(char* filename)

    void hierarchy_predictions(float* predictions, int n, tree* hier, int only_leaves, int stride)

    void change_leaves(tree* t, char* leaf_list)

    int find_int_arg(int argc, char** argv, char* arg, int def_)

    float find_float_arg(int argc, char** argv, char* arg, float def_)

    int find_arg(int argc, char* argv[1], char* arg)

    char* find_char_arg(int argc, char** argv, char* arg, char* def_)

    char* basecfg(char* cfgfile)

    void find_replace(char* str, char* orig, char* rep, char* output)

    void free_ptrs(void** ptrs, int n)

    char* fgetl(FILE* fp)

    void strip(char* s)

    float sec(clock_t clocks)

    void** list_to_array(list* l)

    void top_k(float* a, int n, int k, int* index)

    int* read_map(char* filename)

    void error(char* s)

    int max_index(float* a, int n)

    int max_int_index(int* a, int n)

    int sample_array(float* a, int n)

    int* random_index_order(int min, int max)

    void free_list(list* l)

    float mse_array(float* a, int n)

    float variance_array(float* a, int n)

    float mag_array(float* a, int n)

    float mean_array(float* a, int n)

    float sum_array(float* a, int n)

    void normalize_array(float* a, int n)

    int* read_intlist(char* s, int* n, int d)

    size_t rand_size_t()

    float rand_normal()
